@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2015-11-20
+ * Added fetch_options() to wing.angular.js objectListManager.
+ * Added force-number directive to wing.angular.js.
+
 2015-10-20
  * Added qualifiers option to generate_relationships() in Wing::Rest.
  * Change template so search forms submit when you hit enter.
